Honkalculate table no longer covers tiers

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -222,8 +222,8 @@ th {
     width: 27.5em;
 }
 .holder-0 {
-    position: absolute;
-    top: 151px;
+    /* position: absolute;
+    top: 151px; */
 }
 #holder-2 tr {
     white-space: nowrap;
@@ -523,4 +523,8 @@ table.field {
 .extraSetItems,
 .extraSetMoves {
     width: 100%;
+}
+
+.flex-parent {
+	display: flex;
 }
